9/27/2001
	- jnamed can now listen on specific addresses, with the "address"
	  keyword in the config file.

9/23/2001
	- 1.2.3 released

9/14/2001
	- Creating an Enumeration of an empty RRset caused an infinite loop.
	  (David Blacka <davidb@research.netsol.com>)

8/9/2001
	- nsupdate compatibility and a bug fix to the update client.
	  (patch from David Sward <david@berzerked.org>)
8/8/2001
	- The results of ANY queries were not properly cached.

8/4/2001
	- 1.2.2 released

7/22/2001
	- Added the -q (print query) option to dig.
	- Bitstring labels are now canonicalized.
	- jnamed implements the DO (DNSSEC OK) bit.

7/19/2001
	- A string tokenizer bug caused TXT records with one string to be
	  incorrectly parsed.  (David Blacka)
	- Added Name.getLabelString().

7/17/2001
	- Started implementing Name.compareTo().  (loosely based on a
	  patch from David Blacka).

7/16/2001
	- Converting a AAAA record to wire format was broken.
	  (David Blacka)
	- Inet6Address did not properly reject addresses that are too
	  long or too short, and also didn't properly handle addresses
	  with one number after a double colon.
	- Key footprints were computed incorrectly.  Also cache footprints
	  in the KEYRecord to avoid recomputation. (David Blacka)
	- Added the -d flag to dig, which sets the DNSSEC OK bit.

7/13/2001
	- KEY flags were incorrect (David Blacka <davidb@research.netsol.com>)
	- Add routines for parsing a master file from a non-file input
	  source (David Blacka)
	- base64.formatString() didn't work if lineLength wasn't 64.
	  (David Blacka)
	- Add support for the DNSSEC OK extended flag (David Blacka)
	- Allow the caller of a Resolver to add an OPT record to a query.
	  (original patch from David Blacka).

6/30/2001
	- 1.2.1 released

5/23/2001
	- Automatically determining name servers didn't work on Windows 2000.

4/13/2001
	- Converting a Name to a String does proper character escaping.

4/7/2001
	- 1.2.0 released

3/21/2001